Make ResourceLoadPriority calculation simpler

* Don't keep a separate ResourceLoadPriority value on
  FetchRequest, just use ResourceRequest::m_priority.
* Make a bit more use of FetchRequest::LazyLoad for cases
  like preloads where the priority of a request should be
  very low.
* ResourceFetcher::loadPriority() shouldn't blindly trust the
  priority given by a caller, and instead takes the max of
  the provided priority and the priority it calculates.
* Add a helper to FetchRequest to make a request synchronous,
  so callers don't need to manually flag the request as
  Highest priority.

This may or may not fix a case where synchronous requests are
incorrectly and flakily being given a priority lower than
Highest.

BUG=620334

Review-Url: https://codereview.chromium.org/2072613002
Cr-Commit-Position: refs/heads/master@{#410216}

Former-commit-id: fd0671f01914a4f5e74620e75f673f213d302823